--- a/helm/templates/vproapp-dep.yml
+++ b/helm/templates/vproapp-dep.yml
@@ -21,9 +21,9 @@ spec:
         - name: cicd-port
           containerPort: 8080
       initContainers:
-      - name: init-MySqlService
+      - name: init-mysqlservice
         image: busybox
-        command: ['sh', '-c', 'until nslookup MySqlService; do echo waiting for MySqlService; sleep 2; done;']
-      - name: init-memcachedService
+        command: ['sh', '-c', 'until nslookup mysqlservice; do echo waiting for mysqlservice; sleep 2; done;']
+      - name: init-memcachedservice
         image: busybox
-        command: ['sh', '-c', 'until nslookup memcachedService; do echo waiting for memcachedService; sleep 2; done;']
+        command: ['sh', '-c', 'until nslookup memcachedservice; do echo waiting for memcachedservice; sleep 2; done;']
